--- a/src/main/java/reportes/vFiltroProductos.form
+++ b/src/main/java/reportes/vFiltroProductos.form
@@ -35,8 +35,8 @@
                           </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="tf_produ" max="32767" attributes="0"/>
-                              <Component id="jcb_tipo" max="32767" attributes="0"/>
+                              <Component id="tf_producto" max="32767" attributes="0"/>
+                              <Component id="jcb_deposito" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
@@ -55,7 +55,7 @@
                               </Group>
                               <Group type="102" attributes="0">
                                   <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
-                                  <Component id="jcb_cate" min="-2" pref="269" max="-2" attributes="0"/>
+                                  <Component id="jcb_categoria" min="-2" pref="269" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -76,15 +76,15 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jcb_tipo" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="jcb_deposito" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <Component id="tf_produ" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="tf_producto" alignment="0" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jcb_cate" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jcb_categoria" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -102,9 +102,9 @@
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JTextField" name="tf_produ">
+    <Component class="javax.swing.JTextField" name="tf_producto">
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="tf_produActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="tf_productoActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel5">
@@ -145,7 +145,7 @@
     </Component>
     <Component class="javax.swing.JCheckBox" name="ck_estado">
     </Component>
-    <Component class="javax.swing.JComboBox" name="jcb_tipo">
+    <Component class="javax.swing.JComboBox" name="jcb_deposito">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="0"/>
@@ -155,7 +155,7 @@
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
       </AuxValues>
     </Component>
-    <Component class="javax.swing.JComboBox" name="jcb_cate">
+    <Component class="javax.swing.JComboBox" name="jcb_categoria">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="0"/>
