--- a/src/main/java/com/genesis/vistas/wCompra.form
+++ b/src/main/java/com/genesis/vistas/wCompra.form
@@ -515,6 +515,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="0"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jtfIdActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
