--- a/src/main/java/com/genesis/vistas/wPermisos.form
+++ b/src/main/java/com/genesis/vistas/wPermisos.form
@@ -62,7 +62,8 @@
         <Component class="javax.swing.JTable" name="jtDetalle">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="7" rowCount="0">
+              <Table columnCount="8" rowCount="0">
+                <Column editable="true" title="id" type="java.lang.Object"/>
                 <Column editable="true" title="Menu Id" type="java.lang.Object"/>
                 <Column editable="true" title="Menu" type="java.lang.Object"/>
                 <Column editable="true" title="VER" type="java.lang.Boolean"/>
@@ -74,6 +75,11 @@
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="0">
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
                 <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                   <Title/>
                   <Editor/>
